--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ GTM_INSTALACAO.md
 GOOGLE_ANALYTICS_SETUP.md
 GUIA_SEO.md
 RASTREAMENTO_CONVERSAO.md
+FACEBOOK_CATALOG_SETUP.md
 
 # Guias de Analytics e Otimização (criados automaticamente)
 LEIA_ISTO_PRIMEIRO.md
